samples/_failures_safe/1761305488_986b52_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8958d38d.c: In function ‘update_stats’:
./samples/SAFE/__tmp_8958d38d.c:133:13: error: expected expression at end of input
  133 |             case
      |             ^~~~
./samples/SAFE/__tmp_8958d38d.c:133:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8958d38d.c:133:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8958d38d.c:133:13: error: expected declaration or statement at end of input
